Working on fixing warnings and errors in code validation (Issue #2).